@@ -41,7 +41,9 @@ public:
 	bool counting_down();
 	void think_about_countdown(int ticks);
 	void process(events::pump_info &info);
-	void linger(upload_log&, LEVEL_RESULT result);
+	void linger(upload_log& log, LEVEL_RESULT result);
+	//! Wait for the host to upload the next scenario.
+	void wait_for_upload();
 
 protected:
 	virtual void handle_generic_event(const std::string& name);
