@@ -7,6 +7,9 @@ Version 1.3.13+svn:
    * updated translations: Chinese, Lithuanian
  * multiplayer:
    * renaming a unit no longer genarates an OOS error (bug #7864)
+   * if in a MP campaign the endlevel was continue(_no_save) it could happen
+     that the client left before the host uploaded the new scenarion, this 
+	 has been fixed
  * sound:
    * timer bell in MP starts when there are 20 seconds left and fades in
      gradually for 10 seconds (fr #10559)
